--- a/lecturas3.html
+++ b/lecturas3.html
@@ -82,26 +82,130 @@
 </div>
 <section>
   <br><br><br>
-    <h2>Titulo lectura 3</h2>
+    <h2>Fundamentos de Auditoria de Sistemas</h2>
   <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <div style="height: 620px;width: 713px; overflow-y: auto; ">
                 <article>
                     <figure>
-                        <img src="img/diseno_web.jpg" alt="Diseno">
+                        <img src="img/auditoria_sistemas.jpg" alt="Diseno">
+                        <h5><em>Auditoria de Sistemas - Recuperado de http://www.grupomeridian.com/auditoria-seguridad-informatica</em></h5>
                   	</figure>
                     <p>
-                        Propósitos del curso:<br>
-                        • Que el estudiante se fundamente teóricamente sobre las generalidades básicas del Diseño Web.<br>
-                        • Que el estudiante pueda utilizar de forma correcta los lenguajes HTML5 y CSS3 para aplicarlos en la solución de problemas de construcción de Sitios Web.<br>
-                    • Que el estudiante implemente servicios y sitios web a través de los sistemas gestores de contenidos CMS y LMS libres más usados en la actualidad.</p>
-                    <p>Propósitos del curso:<br>
-• Que el estudiante se fundamente teóricamente sobre las generalidades básicas del Diseño Web.<br>
-• Que el estudiante pueda utilizar de forma correcta los lenguajes HTML5 y CSS3 para aplicarlos en la solución de problemas de construcción de Sitios Web.<br>
-• Que el estudiante implemente servicios y sitios web a través de los sistemas gestores de contenidos CMS y LMS libres más usados en la actualidad.</p>
-                    <p>Propósitos del curso:<br>
-• Que el estudiante se fundamente teóricamente sobre las generalidades básicas del Diseño Web.<br>
-• Que el estudiante pueda utilizar de forma correcta los lenguajes HTML5 y CSS3 para aplicarlos en la solución de problemas de construcción de Sitios Web.<br>
-• Que el estudiante implemente servicios y sitios web a través de los sistemas gestores de contenidos CMS y LMS libres más usados en la actualidad.<br>
+                        La auditoría de sistemas nace debido a la complejidad de los sistemas y la necesidad de evaluar no solo los sistemas, sino también la información, sus componentes y todo lo que está relacionado con los sistemas.<br>
+Así que la auditoria de sistemas es la revisión técnica, especializada y exhaustiva que se realiza a los sistemas computacionales, software e información utilizados es una empresa, sean individuales, compartidos y / o de redes, así como sus instalaciones, telecomunicaciones mobiliario, equipos periféricos y demás componentes. Dicha revisión se realiza de igual manera a la gestión informática, el aprovechamiento de sus recursos, las medidas de seguridad y los bienes de consumo necesarios para el funcionamiento del centro de cómputo.<br>
+El propósito principal es evaluar el uso correcto de los sistemas para el ingreso de datos, un procesamiento adecuado de la información y la emisión oportuna de sus resultados, que incluyen la evaluación de las diferentes actividades y funciones de los empleados, involucrados con los servicios que prestan los sistemas computacionales a la empresa.
+<br><br>
+<strong>Metodología de una auditoría</strong><br> 
+Las metodologías son necesarias para desarrollar un proyecto de manera ordenada y eficaz, además son necesarias para que un equipo de profesionales alcance un resultado homogéneo.<br>
+Son las actividades en que se descomponen cada uno de los objetivos, estas actividades pueden ser verificadas y medidas para saber si se cumplió o no con las metas propuestas en cada objetivo específico y que permiten lograr el objetivo final.<br><br>
+<strong>Etapas de la auditoria</strong><br><br>
+<strong>Planeación</strong><br>
+El primer paso para una auditoría es definir las actividades necesarias para su ejecución, se deben identificar las razones por las cuales se va a realizar la auditoría, establecer el objetivo de la auditoria, así como el diseño de los métodos, técnicas, procedimientos para llevarla a cabo y preparar los documentos para su ejecución.
+Puntos a tener en cuenta en la planeación de la auditoría:<br><br>
+1. Identificar el origen de la auditoría.<br>
+  2. Realizar una visita preliminar al área que será evaluada<br>
+  3. Establecer los objetivos de la auditoría.<br>
+  4. Determinar los puntos que serán evaluados en la auditoría<br>
+  5. Elaborar planes, programas y presupuestos para realizar la auditoría.<br>
+  6. Identificar y seleccionar los métodos, procedimientos, instrumentos y herramientas necesarias para la auditoría.<br>
+  7. Asignar los recursos.<br>
+<br><br><strong>Ejecución</strong><br>
+Es la etapa de realización de las actividades propuestas en la fase de planeación, se aplican los instrumentos y herramientas para la auditoría, se identifican y elaboran los documentos de desviaciones, se elabora un dictamen preliminar y se integran los papeles de trabajo de la auditoría.
+<br><br><strong>Dictamen</strong><br>
+Es el resultado final de la auditoría, en el cual, primero se hace el análisis de los papeles de trabajo, se hace un borrador de las situaciones detectadas, comentando las situaciones encontradas con el personal de las áreas afectadas, corrigiéndolo en caso de ser necesario, luego se elabora el dictamen y por último se presenta de manera formal el informe de auditoría en el cual se incluyen la carta de presentación, el dictamen de la auditoría, el informe de situaciones relevantes, anexos y cuadros adicionales.
+<br><br><strong>Cuadro de Etapas del proceso de Auditoria de sistemas</strong><br>
+                    <figure>
+                        <img src="img/Etapa_auditoria.png" alt="Diseno">
+                        <h5><em>Etapas auditoría de Sistemas - Recuperado de http://auditordesistemas.blogspot.com.co/2011/11/metodologia-para-realizar-auditoria.html</em></h5>
+                    </figure>
+</p>
+<p>
+<br><br><strong>Análisis y evaluación de riesgos</strong><br>
+Para el análisis de riesgos es de suma importancia conocer los siguientes conceptos.
+
+<br><br><strong>Amenazas</strong><br>
+Son la probabilidad de ocurrencia de un evento o suceso potencialmente desastroso durante cierto periodo de tiempo, que puede producir un daño tanto material como inmaterial, sobre los elementos de un sistema. Es un peligro latente de un sistema que puede ser expresado matemáticamente como la probabilidad de exceder un nivel de ocurrencia.
+<br>Las amenazas se dividen en cinco tipos:<br><br>
+<strong>Amenazas humas</strong><br>
+Las personas son la principal fuente de amenaza que existe en los sistemas de información y son el tipo de amenaza en el que se invierten más recursos para contrarrestar sus efectos.
+<br><strong>De Hardware</strong><br>
+Se da la amenaza por fallas físicas que presente cualquiera de los elementos de hardware que conforman al sistema de cómputo. Estas fallas físicas pueden ser defectos de fabricación o mal diseño del hardware, pero también pueden ser el resultando del mal uso y descuido en el mantenimiento.
+<br><strong>De Software</strong><br>
+Las amenazas de software incluyen posibles fallas dentro del software de un sistema operativo, software mal diseñado o mal implantado, además de que existe software de uso malicioso que representa una amenaza directa contra el sistema.
+<br><strong>De red de datos</strong><br>
+Esta amenaza se presenta cuando la red de comunicación no está disponible para su uso, esto puede ser provocado por un ataque deliberado por parte de un intruso o un error físico o lógico del sistema.
+<br><strong>Desastres Naturales</strong><br>
+<br><br><strong>Vulnerabilidad</strong><br>
+La vulnerabilidad es el punto del sistema que es susceptible de ser atacado o de dañar la seguridad del mismo, se representan como las debilidades o aspectos propensos a ataques en el sistema.<br>
+
+Las vulnerabilidades informáticas se clasifican en seis tipos:<br>
+<br><strong>Físicas</strong><br>
+Están relacionadas con el acceso físico al sistema, al acceso y a las instalaciones donde se encuentran los equipos de cómputo. Las vulnerabilidades de este tipo se pueden presentar en forma de malas prácticas de las políticas de acceso del personal a los sistemas.
+<br><strong>Naturales</strong><br>
+Son todo tipo de desastres causados por fuerzas naturales que causan daño a un sistema. Estas vulnerabilidades se presentan principalmente en deficiencias de las medidas tomadas para afrontar los desastres.
+De hardware: Representan la probabilidad de las piezas físicas del sistema fallen ya sea por mal uso, descuido, mal diseño, etc., dejando al sistema desprotegido o inoperable.
+<br><strong>De software</strong><br>Cada programa del sistema puede ser usado como medio para atacar a un sistema más grande, esto se da debido a errores de programación, o por problemas en el diseño.
+De Red: Las redes pueden llegar a ser sistemas muy vulnerables, al tratarse de una serie de equipos conectados entre sí compartiendo recursos, es posible atacar toda la red penetrando primero en uno de los equipos y posteriormente expandirse al resto.
+<br><strong>Factor Humano</strong><br>
+Los elementos humanos de un sistema son los más difíciles de controlar, lo que los convierte en constantes amenazas y al mismo tiempo una de las partes más vulnerables del sistema.<br>
+<br><br><strong>Riesgo</strong><br>
+Los riesgos informáticos son exposiciones tales como atentados y amenazas a los sistemas de información.<br>
+“La probabilidad de que una amenaza se materialice utilizando la vulnerabilidad existente de un activo o grupos de activos, generándoles pérdidas o daños” Fuente: Organización internacional por la Normalización (Iso).<br><br>
+
+Tipos de riesgos:<br>
+<br><strong>Riesgos de integridad</strong>
+<br><strong>Riesgos en la infraestructura</strong>
+<br><strong>Riesgos de seguridad general</strong>
+<br><strong>Dependencia en el personal clave</strong>
+<br><strong>Desaparición de los controles tradicionales</strong>
+<br><strong>Huelgas, terrorismo e inestabilidad social</strong><br><br>
+En este proceso es importante identificar las vulnerabilidades y amenazas existentes en cada uno de los procesos evaluados, además de definir los riesgos existentes a causa de las debilidades.<br><br>
+Después de identificar los riesgos se procede hacer un análisis y evaluación, para determinar cómo se están presentando los riesgos y sus posibles causas, además de determinar cuál es el personal involucrado.<br><br>
+Una vez se tenga el listado de los riesgos y estos estén analizados, se hace una evaluación teniendo en cuenta los criterios de frecuencia con que se presenta y el impacto que ellos pueden ocasionar en caso de concretarse. 
+Para determinar qué clase de daño puede causar un riesgo podemos hacer uso de la matriz de probabilidad de impacto.<br>
+<figure>
+                        <img src="img/matriz.png" alt="Diseno" width="90%">
+                        <h5><em>Matriz de probabilidad de impacto - Recuperado de http://auditordesistemas.blogspot.com.co/2012/02/guias-de-auditoria-para-aplicacion.html</em></h5>
+                    </figure>
+
+</p>
+<p>
+<br><br><strong>Métodos, técnicas, herramientas y procedimientos de auditoría</strong><br>
+
+<br><strong>Instrumentos de recopilación de datos aplicables en la auditoría de sistemas</strong><br>
+• Entrevistas<br>
+• Cuestionario<br>
+• Encuestas<br>
+• Observación<br>
+• Inventarios<br>
+• Muestreo<br>
+• Experimentación<br>
+
+<br><strong>Técnicas de evaluación aplicables en la auditoría de sistemas</strong><br>
+• Examen<br>
+• Inspección<br>
+• Confirmación<br>
+• Comparación<br>
+• Revisión documental<br>
+<br><strong>Técnicas especiales para la auditoría de sistemas computacionales</strong><br>
+• Guías de evaluación<br>
+• Ponderación<br>
+• Simulación<br>
+• Evaluación<br>
+• Diagrama del círculo de sistemas<br>
+• Diagramas de sistemas<br>
+• Matriz de evaluación<br>
+• Programas de verificación<br>
+• Seguimiento de programación<br><br><br>
+</p>
+<p>
+<center>
+<h5><em>Bibliografía<br>
+Solarte, F. (2012). Auditoria informática y de sistemas. [online] Auditoria informática y de sistemas. Recuperado el 19 de octubre de 2016 de: http://auditordesistemas.blogspot.com.co<br><br>
+Muñoz Razo, C. (2002). Auditoria en sistemas computacionales. México: Pearson Educación.
+</em></h5>
+</center>
+
                     </p>
       			</article></div>
     </section>
