--- a/lecturas33.html
+++ b/lecturas33.html
@@ -12,7 +12,16 @@
         <link href='http://fonts.googleapis.com/css?family=arial' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/style.css">
         <style type="text/css">
-       
+        #apDiv28 {
+	position: absolute;
+	width: 713px;
+	height: 44px;
+	z-index: 13;
+	left: 0px;
+	top: 240px;
+	border-radius: 10px 0px 0px 0px;
+	background-color: #003F5E;
+}
         </style>
     </head>
     <body>	
@@ -22,9 +31,9 @@
                   <div id="apDiv24">OVA Para curso Seguridad Informática - Tecnología en Desarrollo de Software</div>
               </div>
             </header>
-   	<p>&nbsp;</p>
-	<p>&nbsp;</p>
-    <p>&nbsp;</p>
+        	<p>&nbsp;</p>
+   			<p>&nbsp;</p>
+            <p>&nbsp;</p>
     		<nav>
               <ul class="menu">
                 <li><a href="index.html" class="menu">Inicio</a></li>
@@ -35,7 +44,7 @@
                 <div id="apDiv19">
                 <center>
                 	<div id="cuentavisitas"></div>
-				  <script>yu=function(id){return document.getElementById(id);}
+						<script>yu=function(id){return document.getElementById(id);}
 							if(localStorage){
 							if(localStorage['visitas']==undefined){
 							localStorage['visitas']=0;
@@ -63,48 +72,38 @@
                    </form>
                 </div>
     </nav>
-            <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a>									</div>
-    <section>
-    <div id="apDiv31"><br>
-    </div>
-    <div id="apDiv32">Autores</div>
-    <div id="apDiv38"><p><strong>Luis Fernando Jaramillo H.</strong><br>
-                        Código: 9869838<br>
-                        Programa: Ingeniería de Sistemas<br>
-                        Correo electrónico: lfjaramilloh@unadvirtual.edu.co<br>
-                        Skype: ferjaher<br></div>
-      <div id="apDiv39">
-        <p><strong>Nombre Alumno 2.</strong><br>
-                        Código: <br>
-                        Programa: <br>
-                        Correo electrónico: <br>
-      Skype: <br></div>
-      <div id="apDiv40">
-        <p><strong>Heidy Lorena Palacios A.</strong><br>
-                        Código: 42141500<br>
-                        Programa: Ingeniería de Sistemas<br>
-                        Correo electrónico: <br>
-      Skype: heidy-palacios<br></div>
-      <div id="apDiv41">
-        <p><strong>Diego Alejandro Gutierrez</strong><br>
-                        Código: 9869787<br>
-                        Programa: Ingeniería de Sistemas<br>
-                        Correo electrónico: agl.diego@gmail.com<br>
-      Skype: agl.diego<br></div>
-      <div id="apDiv42">
-        <p><strong>Nombre Alumno 5.</strong><br>
-                        Código: <br>
-                        Programa: <br>
-                        Correo electrónico: <br>
-      Skype: <br></div>
-<div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
-      <article>
-        <div id="apDiv33"><img src="img/A1.jpg" width="112" height="115"></div>
-        <div id="apDiv34"><img src="img/A2.jpg" width="112" height="115"></div>
-        <div id="apDiv35"><img src="img/A3.jpg" width="112" height="115"></div>
-        <div id="apDiv36"><img src="img/A4.jpg" width="112" height="115"></div>
-        <div id="apDiv37"><img src="img/A5.jpg" width="112" height="115"></div>
-      </article>
+            <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a></div>
+    <div id="apDiv28"><ul class="dropdownmenu">
+  	
+    <li><a href="lecturas.html">Lectura 1</a></li>
+    <li><a href="lecturas2.html">Lectura 2</a></li>
+    <li><a href="lecturas3.html">Lectura 3</a>
+   </ul>
+</div>
+<section>
+  <br><br><br>
+    <h2>Titulo lectura 3</h2>
+  <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
+                <div style="height: 620px;width: 713px; overflow-y: auto; ">
+                <article>
+                    <figure>
+                        <img src="img/diseno_web.jpg" alt="Diseno">
+                  	</figure>
+                    <p>
+                        Propósitos del curso:<br>
+                        • Que el estudiante se fundamente teóricamente sobre las generalidades básicas del Diseño Web.<br>
+                        • Que el estudiante pueda utilizar de forma correcta los lenguajes HTML5 y CSS3 para aplicarlos en la solución de problemas de construcción de Sitios Web.<br>
+                    • Que el estudiante implemente servicios y sitios web a través de los sistemas gestores de contenidos CMS y LMS libres más usados en la actualidad.</p>
+                    <p>Propósitos del curso:<br>
+• Que el estudiante se fundamente teóricamente sobre las generalidades básicas del Diseño Web.<br>
+• Que el estudiante pueda utilizar de forma correcta los lenguajes HTML5 y CSS3 para aplicarlos en la solución de problemas de construcción de Sitios Web.<br>
+• Que el estudiante implemente servicios y sitios web a través de los sistemas gestores de contenidos CMS y LMS libres más usados en la actualidad.</p>
+                    <p>Propósitos del curso:<br>
+• Que el estudiante se fundamente teóricamente sobre las generalidades básicas del Diseño Web.<br>
+• Que el estudiante pueda utilizar de forma correcta los lenguajes HTML5 y CSS3 para aplicarlos en la solución de problemas de construcción de Sitios Web.<br>
+• Que el estudiante implemente servicios y sitios web a través de los sistemas gestores de contenidos CMS y LMS libres más usados en la actualidad.<br>
+                    </p>
+      			</article></div>
     </section>
     <aside> 
                 <div id="apDiv5">
