--- a/autores.html
+++ b/autores.html
@@ -83,7 +83,7 @@
         <p><strong>Heidy Lorena Palacios A.</strong><br>
                         Código: 42141500<br>
                         Programa: Ingeniería de Sistemas<br>
-                        Correo electrónico: <br>
+                        Correo electrónico: hlpalaciosa@unadvirtual.edu.co<br>
       Skype: heidy-palacios<br></div>
       <div id="apDiv41">
         <p><strong>Diego Alejandro Gutierrez</strong><br>
