--- a/lecturas.html
+++ b/lecturas.html
@@ -73,7 +73,7 @@
 </div>
 <section>
   <br><br><br>
-    <h2>Virus Informáticos e Infecciones</h2>
+    <h2>Lectura 1- Virus Informáticos e Infecciones</h2>
   <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <div style="height: 620px;width: 713px; overflow-y: auto; ">
                 <article>
