--- a/lecturas3.html
+++ b/lecturas3.html
@@ -82,7 +82,7 @@
 </div>
 <section>
   <br><br><br>
-    <h2>Fundamentos de Auditoria de Sistemas</h2>
+    <h2>Lectura 3 - Fundamentos de Auditoria de Sistemas</h2>
   <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <div style="height: 620px;width: 713px; overflow-y: auto; ">
                 <article>
@@ -202,7 +202,7 @@ Para determinar qué clase de daño puede causar un riesgo podemos hacer uso de 
 <center>
 <h5><em>Bibliografía<br>
 Solarte, F. (2012). Auditoria informática y de sistemas. [online] Auditoria informática y de sistemas. Recuperado el 19 de octubre de 2016 de: http://auditordesistemas.blogspot.com.co<br><br>
-Muñoz Razo, C. (2002). Auditoria en sistemas computacionales. México: Pearson Educación.
+Muñoz Razo, C. (2002). Auditoria en sistemas computacionales. México: Pearson Educación.
 </em></h5>
 </center>
 
