--- a/lecturas2.html
+++ b/lecturas2.html
@@ -82,7 +82,7 @@
 </div>
 <section>
   <br><br><br>
-    <h2>ISO 27001</h2>
+    <h2>Lectura 2 - ISO 27001</h2>
   <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <div style="height: 620px;width: 713px; overflow-y: auto; ">
                 <article>
