--- a/autores.html
+++ b/autores.html
@@ -74,11 +74,11 @@
                         Correo electrónico: lfjaramilloh@unadvirtual.edu.co<br>
                         Skype: ferjaher<br></div>
       <div id="apDiv39">
-        <p><strong>Nombre Alumno 2.</strong><br>
-                        Código: <br>
-                        Programa: <br>
-                        Correo electrónico: <br>
-      Skype: <br></div>
+        <p><strong>Diego Hernando Tobón Giraldo</strong><br>
+                        Código: 18617948<br>
+                        Programa: Ingeniería de Sistemas<br>
+                        Correo electrónico: diegonal@gmail.com<br>
+      Skype: diego-tobon <br></div>
       <div id="apDiv40">
         <p><strong>Heidy Lorena Palacios A.</strong><br>
                         Código: 42141500<br>
