--- a/autores.html
+++ b/autores.html
@@ -92,7 +92,7 @@
                         Correo electrónico: agl.diego@gmail.com<br>
       Skype: agl.diego<br></div>
       <div id="apDiv42">
-        <p><strong>Nombre Alumno 5.</strong><br>
+        <p><strong>Nombre Alumno 5</strong><br>
                         Código: <br>
                         Programa: <br>
                         Correo electrónico: <br>
