--- a/actividades.html
+++ b/actividades.html
@@ -30,19 +30,6 @@
                 <li><a href="multimedia.html" class="menu">Multimedia</a></li>
                 <li><a href="actividades.html" class="menu">Actividades</a></li>
                 <li><a href="autores.html" class="menu">Autores</a></li>
-                <div id="apDiv19">
-                <center>
-                	<div id="cuentavisitas"></div>
-						<script>yu=function(id){return document.getElementById(id);}
-							if(localStorage){
-							if(localStorage['visitas']==undefined){
-							localStorage['visitas']=0;
-							}var n=parseInt(localStorage['visitas']);localStorage['visitas']=1+n;
-							var num=localStorage['visitas'];
-							var mensaje=num + " visitas";
-							 yu('cuentavisitas').innerHTML=mensaje;}
-                        </script>
-                </center></div>
                 <div id="apDiv4"><a id="l1" target="_blank" rel="nofollow" href="https://www.facebook.com/Universidad-Nacional-Abierta-y-a-Distancia-UNAD-285790428108305/"><img title="Facebook"border="0" src="img/facebook_aqu_32.png" alt="Facebook" /></a><a href="https://www.youtube.com/user/universidadunad" target="_blank"><img src="img/youtube.png" alt="YouTube" title="Twitter" border="0" /></a><span class="nsb_container"><a href="https://twitter.com/UniversidadUNAD" target="_blank"><img src=			 "img/twitter_aqu_32.png" class="menu" title="Twitter" border="0" /></a></span></div> 
               </ul>
                  <div id="apDiv3">    
@@ -64,11 +51,11 @@
             <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a></div>
     <div id="apDiv28"><ul class="dropdownmenu">
   
-    <li><a href="quiz.html">Quiz</a></li>
-    <li><a href="sopa.html">Sopa  de Letras</a></li>
-    <li><a href="crucigrama.html">Crucigrama</a>
-      <li><a href="completar.html">Completar</a></li>
-    <li><a href="relacionar.html">Relacionar respuestas</a></li>
+    <li><a href="quiz.html">QUIZ</a></li>
+    <li><a href="sopa.html">SOPA LETRAS</a></li>
+    <li><a href="crucigrama.html">CRUCIGRAMA</a>
+    <li><a href="completar.html">COMPLETAR</a></li>
+    <li><a href="relacionar.html">BUSCAR RESPUESTAS</a></li>
   </ul>
 </div>
 <section>
@@ -76,14 +63,14 @@
   <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <article>
                     <figure><br><br>
-    <h2>Módulo de Actividades</h2>
+    <h2>Módulo de Actividades Didácticas</h2>
 
                         <div id="apDiv43"><img src="img/flecha.png" width="116" height="116"></div>
                         <img src="img/integracion.png" alt="Diseno">
                   	</figure>
                     <p>
                   En esta sección encontrarás cinco activodades interactivas, en las cuales pondrás a prueba tus conocimientos básicos sobre Seguridad Informática: Quiz, Sopa de letras, Crucigrama, Completar textos y oraciones y Relacionar respuestas conceptuales. </p>
-                    <p><strong>Hacer clic en el boton de la acticvidad deseada!.! Mucha Suerte!</strong><br>
+                    <p><strong>Hacer clic en el botón de la acticvidad deseada en el submenú superior!.! Mucha Suerte!</strong><br>
                     </p>
       			</article>
     </section>
