--- a/autores.html
+++ b/autores.html
@@ -32,19 +32,6 @@
                 <li><a href="multimedia.html" class="menu">Multimedia</a></li>
                 <li><a href="actividades.html" class="menu">Actividades</a></li>
                 <li><a href="autores.html" class="menu">Autores</a></li>
-                <div id="apDiv19">
-                <center>
-                	<div id="cuentavisitas"></div>
-				  <script>yu=function(id){return document.getElementById(id);}
-							if(localStorage){
-							if(localStorage['visitas']==undefined){
-							localStorage['visitas']=0;
-							}var n=parseInt(localStorage['visitas']);localStorage['visitas']=1+n;
-							var num=localStorage['visitas'];
-							var mensaje=num + " visitas";
-							 yu('cuentavisitas').innerHTML=mensaje;}
-                        </script>
-                </center></div>
                 <div id="apDiv4"><a id="l1" target="_blank" rel="nofollow" href="https://www.facebook.com/Universidad-Nacional-Abierta-y-a-Distancia-UNAD-285790428108305/"><img title="Facebook"border="0" src="img/facebook_aqu_32.png" alt="Facebook" /></a><a href="https://www.youtube.com/user/universidadunad" target="_blank"><img src="img/youtube.png" alt="YouTube" title="Twitter" border="0" /></a><span class="nsb_container"><a href="https://twitter.com/UniversidadUNAD" target="_blank"><img src=			 "img/twitter_aqu_32.png" class="menu" title="Twitter" border="0" /></a></span></div> 
               </ul>
                  <div id="apDiv3">    
@@ -92,11 +79,11 @@
                         Correo electrónico: agl.diego@gmail.com<br>
       Skype: agl.diego<br></div>
       <div id="apDiv42">
-        <p><strong>Nombre Alumno 5</strong><br>
-                        Código: <br>
-                        Programa: <br>
-                        Correo electrónico: <br>
-      Skype: <br></div>
+        <p><strong>Jhon Faber Cubillos Pinilla</strong><br>
+                        Código: 9930249<br>
+                        Programa: Ingeniería de Sistemas<br>
+                        Correo electrónico: jhonfcpp8@gmial.com<br>
+      Skype: jfcubillosp<br></div>
 <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
       <article>
         <div id="apDiv33"><img src="img/A1.jpg" width="112" height="115"></div>
