--- a/index.html
+++ b/index.html
@@ -32,17 +32,7 @@
                 <li><a href="autores.html" class="menu">Autores</a></li>
                 <div id="apDiv19">
                 <center>
-                	<div id="cuentavisitas"></div>
-				  <script>yu=function(id){return document.getElementById(id);}
-							if(localStorage){
-							if(localStorage['visitas']==undefined){
-							localStorage['visitas']=0;
-							}var n=parseInt(localStorage['visitas']);localStorage['visitas']=1+n;
-							var num=localStorage['visitas'];
-							var mensaje=num + " visitas";
-							 yu('cuentavisitas').innerHTML=mensaje;}
-                        </script>
-                </center></div>
+                	<center><a href="http://www.cerotec.net/estadisticas-81963/ferjaher.github.io" title="Contador de visitas"><img src="http://www.cerotec.net/contador.php?t=1&s=3&i=81963" alt="Contador de visitas y estadísticas"></a> </center></div>
                 <div id="apDiv4"><a id="l1" target="_blank" rel="nofollow" href="https://www.facebook.com/Universidad-Nacional-Abierta-y-a-Distancia-UNAD-285790428108305/"><img title="Facebook"border="0" src="img/facebook_aqu_32.png" alt="Facebook" /></a><a href="https://www.youtube.com/user/universidadunad" target="_blank"><img src="img/youtube.png" alt="YouTube" title="Twitter" border="0" /></a><span class="nsb_container"><a href="https://twitter.com/UniversidadUNAD" target="_blank"><img src=			 "img/twitter_aqu_32.png" class="menu" title="Twitter" border="0" /></a></span></div> 
               </ul>
                  <div id="apDiv3">    
