--- a/lecturas3.html
+++ b/lecturas3.html
@@ -30,19 +30,6 @@
                 <li><a href="multimedia.html" class="menu">Multimedia</a></li>
                 <li><a href="actividades.html" class="menu">Actividades</a></li>
                 <li><a href="autores.html" class="menu">Autores</a></li>
-                <div id="apDiv19">
-                <center>
-                	<div id="cuentavisitas"></div>
-						<script>yu=function(id){return document.getElementById(id);}
-							if(localStorage){
-							if(localStorage['visitas']==undefined){
-							localStorage['visitas']=0;
-							}var n=parseInt(localStorage['visitas']);localStorage['visitas']=1+n;
-							var num=localStorage['visitas'];
-							var mensaje=num + " visitas";
-							 yu('cuentavisitas').innerHTML=mensaje;}
-                        </script>
-                </center></div>
                 <div id="apDiv4"><a id="l1" target="_blank" rel="nofollow" href="https://www.facebook.com/Universidad-Nacional-Abierta-y-a-Distancia-UNAD-285790428108305/"><img title="Facebook"border="0" src="img/facebook_aqu_32.png" alt="Facebook" /></a><a href="https://www.youtube.com/user/universidadunad" target="_blank"><img src="img/youtube.png" alt="YouTube" title="Twitter" border="0" /></a><span class="nsb_container"><a href="https://twitter.com/UniversidadUNAD" target="_blank"><img src=			 "img/twitter_aqu_32.png" class="menu" title="Twitter" border="0" /></a></span></div> 
               </ul>
                  <div id="apDiv3">    
@@ -64,9 +51,9 @@
             <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a></div>
     <div id="apDiv28"><ul class="dropdownmenu">
   	
-    <li><a href="lecturas.html">Lectura 1</a></li>
-    <li><a href="lecturas2.html">Lectura 2</a></li>
-    <li><a href="lecturas3.html">Lectura 3</a>
+    <li><a href="lecturas.html">LECTURA 1</a></li>
+    <li><a href="lecturas2.html">LECTURA 2</a></li>
+    <li><a href="lecturas3.html">LECTURA 3</a>
    </ul>
 </div>
 <section>
