--- a/actividades.html
+++ b/actividades.html
@@ -69,7 +69,7 @@
                         <img src="img/integracion.png" alt="Diseno">
                   	</figure>
                     <p>
-                  En esta sección encontrarás cinco activodades interactivas, en las cuales pondrás a prueba tus conocimientos básicos sobre Seguridad Informática: Quiz, Sopa de letras, Crucigrama, Completar textos y oraciones y Relacionar respuestas conceptuales. </p>
+                  En esta sección encontrarás cinco actividades interactivas, en las cuales pondrás a prueba tus conocimientos básicos sobre Seguridad Informática: Quiz, Sopa de letras, Crucigrama, Completar textos - oraciones y Relacionar respuestas conceptuales. </p>
                     <p><strong>Hacer clic en el botón de la acticvidad deseada en el submenú superior!.! Mucha Suerte!</strong><br>
                     </p>
       			</article>
