--- a/autores.html
+++ b/autores.html
@@ -81,7 +81,7 @@
         <p><strong>Jhon Faber Cubillos Pinilla</strong><br>
                         Código: 9930249<br>
                         Programa: Ingeniería de Sistemas<br>
-                        Correo electrónico: jhonfcp8@gmial.com<br>
+                        Correo electrónico: jhonfcp8@gmail.com<br>
       Skype: jfcubillosp<br></div>
 <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
       <article>
